parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    PALABRAS_RESERVADAS

Grammar

Rule 0     S' -> S
Rule 1     S -> INICIO sentencias FIN
Rule 2     sentencias -> sentencia FIN_DE_LINEA sentencias
Rule 3     sentencias -> sentencia FIN_DE_LINEA
Rule 4     sentencia -> DEFINA ID COMO TIPO
Rule 5     sentencia -> ID ASIGNACION ID
Rule 6     sentencia -> OPERACION PARAENTESIS_IZQ ID PARAENTESIS_DER

Terminals, with rules where they appear

ASIGNACION           : 5
COMO                 : 4
DEFINA               : 4
FIN                  : 1
FIN_DE_LINEA         : 2 3
ID                   : 4 5 5 6
INICIO               : 1
OPERACION            : 6
PALABRAS_RESERVADAS  : 
PARAENTESIS_DER      : 6
PARAENTESIS_IZQ      : 6
TIPO                 : 4
error                : 

Nonterminals, with rules where they appear

S                    : 0
sentencia            : 2 3
sentencias           : 1 2

Parsing method: LALR

state 0

    (0) S' -> . S
    (1) S -> . INICIO sentencias FIN

    INICIO          shift and go to state 2

    S                              shift and go to state 1

state 1

    (0) S' -> S .



state 2

    (1) S -> INICIO . sentencias FIN
    (2) sentencias -> . sentencia FIN_DE_LINEA sentencias
    (3) sentencias -> . sentencia FIN_DE_LINEA
    (4) sentencia -> . DEFINA ID COMO TIPO
    (5) sentencia -> . ID ASIGNACION ID
    (6) sentencia -> . OPERACION PARAENTESIS_IZQ ID PARAENTESIS_DER

    DEFINA          shift and go to state 5
    ID              shift and go to state 6
    OPERACION       shift and go to state 7

    sentencias                     shift and go to state 3
    sentencia                      shift and go to state 4

state 3

    (1) S -> INICIO sentencias . FIN

    FIN             shift and go to state 8


state 4

    (2) sentencias -> sentencia . FIN_DE_LINEA sentencias
    (3) sentencias -> sentencia . FIN_DE_LINEA

    FIN_DE_LINEA    shift and go to state 9


state 5

    (4) sentencia -> DEFINA . ID COMO TIPO

    ID              shift and go to state 10


state 6

    (5) sentencia -> ID . ASIGNACION ID

    ASIGNACION      shift and go to state 11


state 7

    (6) sentencia -> OPERACION . PARAENTESIS_IZQ ID PARAENTESIS_DER

    PARAENTESIS_IZQ shift and go to state 12


state 8

    (1) S -> INICIO sentencias FIN .

    $end            reduce using rule 1 (S -> INICIO sentencias FIN .)


state 9

    (2) sentencias -> sentencia FIN_DE_LINEA . sentencias
    (3) sentencias -> sentencia FIN_DE_LINEA .
    (2) sentencias -> . sentencia FIN_DE_LINEA sentencias
    (3) sentencias -> . sentencia FIN_DE_LINEA
    (4) sentencia -> . DEFINA ID COMO TIPO
    (5) sentencia -> . ID ASIGNACION ID
    (6) sentencia -> . OPERACION PARAENTESIS_IZQ ID PARAENTESIS_DER

    FIN             reduce using rule 3 (sentencias -> sentencia FIN_DE_LINEA .)
    DEFINA          shift and go to state 5
    ID              shift and go to state 6
    OPERACION       shift and go to state 7

    sentencia                      shift and go to state 4
    sentencias                     shift and go to state 13

state 10

    (4) sentencia -> DEFINA ID . COMO TIPO

    COMO            shift and go to state 14


state 11

    (5) sentencia -> ID ASIGNACION . ID

    ID              shift and go to state 15


state 12

    (6) sentencia -> OPERACION PARAENTESIS_IZQ . ID PARAENTESIS_DER

    ID              shift and go to state 16


state 13

    (2) sentencias -> sentencia FIN_DE_LINEA sentencias .

    FIN             reduce using rule 2 (sentencias -> sentencia FIN_DE_LINEA sentencias .)


state 14

    (4) sentencia -> DEFINA ID COMO . TIPO

    TIPO            shift and go to state 17


state 15

    (5) sentencia -> ID ASIGNACION ID .

    FIN_DE_LINEA    reduce using rule 5 (sentencia -> ID ASIGNACION ID .)


state 16

    (6) sentencia -> OPERACION PARAENTESIS_IZQ ID . PARAENTESIS_DER

    PARAENTESIS_DER shift and go to state 18


state 17

    (4) sentencia -> DEFINA ID COMO TIPO .

    FIN_DE_LINEA    reduce using rule 4 (sentencia -> DEFINA ID COMO TIPO .)


state 18

    (6) sentencia -> OPERACION PARAENTESIS_IZQ ID PARAENTESIS_DER .

    FIN_DE_LINEA    reduce using rule 6 (sentencia -> OPERACION PARAENTESIS_IZQ ID PARAENTESIS_DER .)

